log
Fri Apr 17 07:00:13 PM UTC 2026: 
 hashmap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:76:5: error: expected ‘,’ or ‘;’ before ‘while’
   76 |     while(map->buckets[indice]!=NULL)
      |     ^~~~~
hashmap.c:74:10: error: unused variable ‘inicio’ [-Werror=unused-variable]
   74 |     long inicio = indice
      |          ^~~~~~
cc1: all warnings being treated as errors
0fe9c6a
Fri Apr 17 07:00:41 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:84:22: error: ‘start’ undeclared (first use in this function)
   84 |         if(inicio == start) return break;
      |                      ^~~~~
hashmap.c:84:22: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:84:36: error: expected expression before ‘break’
   84 |         if(inicio == start) return break;
      |                                    ^~~~~
1eac4af
Fri Apr 17 07:00:55 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:84:37: error: expected expression before ‘break’
   84 |         if(inicio == indice) return break;
      |                                     ^~~~~
36b0c3a
Fri Apr 17 07:01:10 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|6
total_score: 10/60
e665338
Fri Apr 17 07:09:30 PM UTC 2026: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  3|6
total_score: 10/60
bbdbc9e
Sun Apr 19 10:55:21 PM UTC 2026: 
 hashmap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:50:5: error: ‘newMap’ undeclared (first use in this function); did you mean ‘NewMap’?
   50 |     newMap->buckets =(Pair**)malloc(sizeof(Pair*)*capacity);
      |     ^~~~~~
      |     NewMap
hashmap.c:50:5: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:48:15: error: unused variable ‘NewMap’ [-Werror=unused-variable]
   48 |     HashMap * NewMap =(HashMap*)malloc(sizeof(HashMap));
      |               ^~~~~~
hashmap.c:61:1: error: control reaches end of non-void function [-Werror=return-type]
   61 | }
      | ^
cc1: all warnings being treated as errors
de04267
